# scale-borrow

./: Cargo.toml  README.md
src/: borrow_decode.rs  lib.rs  value.rs
