[package]
name = "scale-borrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "3.2.1", default-features = false}
scale-info = { version = "2.3", default-features = false }
scale-bits={version="*", features = ["scale-info"], default-features = false}
scale-decode= { git="http://github.com/paritytech/scale-decode.git", default-features = false, branch="jsdw-decode-as-type" }
hex = { version = "*", optional = true }

[dev-dependencies]
# once v16 released we can use versions
frame-metadata = { git="https://github.com/paritytech/frame-metadata.git", default-features = false, features = ["v14", "decode"] }
wasm-bindgen-test = "0.3.0"

[features]
default = ["display"]
display = ["hex"]