[package]
name = "scale-borrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "3.2.1", default-features = false}
scale-info = { version = "2.3", default-features = false }
scale-bits= {version="0.4", features = ["scale-info"], default-features = false}
scale-decode = {version="0.10", default-features = false}
hex = { version = "*", optional = true }

[dev-dependencies]
frame-metadata = {version = "16.0", default-features = false, features = ["current", "decode"]}
wasm-bindgen-test = "0.3.0"

[features]
default = ["display"]
display = ["hex"]